# limgui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gl.lua  glfw_test.lua  imgui_test.lua  stylua.toml  tasks.py
_external/: CMakeLists.txt
_external/MikkTSpace/: CMakeLists.txt  mikktspace.def
_external/glad/: CMakeLists.txt
_external/glfw/: CMakeLists.txt
_external/imgui/: CMakeLists.txt
_external/stb/: CMakeLists.txt
assets/: gltf.fs  gltf.vs  minimal.fs  minimal.vs  normal_map.fs  normal_map.vs
assets/gltf/: url.txt
imgui_ffi/: mod.lua
imgui_ffi/cdef/: gl.lua  imgui.lua  vadefs.lua  vcruntime.lua
libs/: CMakeLists.txt
libs/glad_cmake/: CMakeLists.txt
libs/imgui_cmake/: CMakeLists.txt
lua/: app.lua  clang_viewer.lua  example_glfw_opengl3.lua  glfw_sample.lua  glfw_test.lua  gltf_viewer.lua  imgui_test.lua  json_viewer.lua  limgui.lua  luajit-msgpack-pure.lua  mafex.lua  mat4.lua
lua/engine/: asset.lua  camera.lua  drawable.lua  gltf.lua  init.lua  material.lua  mod.lua  renderer.lua  scene.lua  shader.lua  shaders.lua  vbo.lua  vertex_buffer.lua
lua/gl_ffi/: generate_emmy_annotation.lua  mod.lua
lua/imgui_ffi/: mod.lua
lua/imgui_ffi/cdef/: corecrt_wstdio.lua  gl.lua  imgui.lua  imgui_impl_glfw.lua  imgui_impl_opengl3.lua  imgui_internal.lua  imstb_textedit.lua  vadefs.lua  vcruntime.lua
lua/imgui_widgets/: gui_dockspace.lua  gui_table.lua  init.lua  utils.lua
lua/libs/gl_ffi/: generate_emmy_annotation.lua
lua/limgui/: gui_dockspace.lua  gui_table.lua  renderer.lua  scene.lua  utils.lua
lua/scene/: gltf.lua  init.lua  material.lua  mesh.lua  mikktspace.lua  node.lua  vertex_layout.lua  world.lua
samples/: clang_viewer.lua  example_glfw_opengl3.lua  glfw_mouse_camera.lua  glfw_normal_map.lua  glfw_sample.lua  glfw_triangle_2D.lua  gltf_viewer.lua  json_viewer.lua
tests/: test.lua  test_gltf.lua  test_gui.lua  test_mafex.lua  test_scene.lua
