SET(TARGET_NAME glad)
SET(GLFW_DIR ${CMAKE_CURRENT_LIST_DIR}/../glfw)
ADD_LIBRARY(${TARGET_NAME} SHARED
    ${GLFW_DIR}/deps/glad_gl.c
)
TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${GLFW_DIR}/deps
)
TARGET_COMPILE_DEFINITIONS(${TARGET_NAME} 
PUBLIC
    "GLAD_API_CALL_EXPORT=1"
PRIVATE
    "GLAD_API_CALL_EXPORT_BUILD"
)
TARGET_LINK_DIRECTORIES(${TARGET_NAME} PRIVATE
    "$<$<CONFIG:Release>:${GLFW_DIR}/build/src/Release>"
    "$<$<CONFIG:Debug>:${GLFW_DIR}/build/src/Debug>"
)
